--- a/Excel/C#/NetOffice COMAddin Examples/06 Shim/06 Shim.csproj
+++ b/Excel/C#/NetOffice COMAddin Examples/06 Shim/06 Shim.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F7879329-DDE9-49E5-A6A5-FE5619BB9B11}</ProjectGuid>
+    <ProjectGuid>{7A34B86F-2AD0-467E-9FDD-4374620EE5D4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Excel04AddinCS4</RootNamespace>
-    <AssemblyName>Excel04AddinCS4</AssemblyName>
+    <RootNamespace>Excel06AddinCS4</RootNamespace>
+    <AssemblyName>Excel06AddinCS4</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -57,6 +57,11 @@
   <ItemGroup>
     <Compile Include="Addin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Excel06AddinCS4.Shim.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
