Update Word samples for NetOffice 1.7.4.1

--- a/NuGet.config
+++ b/NuGet.config
@@ -3,7 +3,8 @@
   <packageSources>
     <clear />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-    <add key="NetOfficeFw Dev Feed" value="https://www.myget.org/F/netofficefw-dev/api/v3/index.json" protocolVersion="3" />
+    <add key="NetOffice Feed" value="https://www.myget.org/F/netoffice/api/v3/index.json" protocolVersion="3" />
+    <!-- <add key="NetOfficeFw Dev Feed" value="https://www.myget.org/F/netofficefw-dev/api/v3/index.json" protocolVersion="3" /> -->
   </packageSources>
   <config>
     <add key="repositoryPath" value="packages" />
