--- a/Outlook/03 IDTExtensibility2 Outlook Sample/ClassicUI/IDTExtensibility2 - ClassicUI.csproj
+++ b/Outlook/03 IDTExtensibility2 Outlook Sample/ClassicUI/IDTExtensibility2 - ClassicUI.csproj
@@ -37,23 +37,23 @@
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
-    <Reference Include="NetOffice, Version=1.7.3.0, Culture=neutral, PublicKeyToken=297f57b43ae7c1de, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\NetOffice.Core.1.7.3.0\lib\net40\NetOffice.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
+    <Reference Include="NetOffice, Version=1.7.4.1, Culture=neutral, PublicKeyToken=297f57b43ae7c1de">
+      <HintPath>..\..\..\packages\NetOffice.Core.1.7.4.1-pre1\lib\net40\NetOffice.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="OfficeApi, Version=1.7.3.0, Culture=neutral, PublicKeyToken=a39beb0835c43c8e, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\NetOffice.Core.1.7.3.0\lib\net40\OfficeApi.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
+    <Reference Include="OfficeApi, Version=1.7.4.1, Culture=neutral, PublicKeyToken=a39beb0835c43c8e">
+      <HintPath>..\..\..\packages\NetOffice.Core.1.7.4.1-pre1\lib\net40\OfficeApi.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="OutlookApi, Version=1.7.3.0, Culture=neutral, PublicKeyToken=b118031aaa1097f3, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\NetOffice.Outlook.1.7.3.0\lib\net40\OutlookApi.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
+    <Reference Include="OutlookApi, Version=1.7.4.1, Culture=neutral, PublicKeyToken=b118031aaa1097f3">
+      <HintPath>..\..\..\packages\NetOffice.Outlook.1.7.4.1-pre1\lib\net40\OutlookApi.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="VBIDEApi, Version=1.7.3.0, Culture=neutral, PublicKeyToken=931cec8882205047, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\NetOffice.Core.1.7.3.0\lib\net40\VBIDEApi.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
+    <Reference Include="VBIDEApi, Version=1.7.4.1, Culture=neutral, PublicKeyToken=931cec8882205047">
+      <HintPath>..\..\..\packages\NetOffice.Core.1.7.4.1-pre1\lib\net40\VBIDEApi.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
