--- a/Excel/03 IDTExtensibility2 Excel Sample/TaskPane/packages.config
+++ b/Excel/03 IDTExtensibility2 Excel Sample/TaskPane/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NetOffice.Core" version="1.7.3.0" targetFramework="net40" />
-  <package id="NetOffice.Excel" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOffice.Core" version="1.7.4.1-pre1" targetFramework="net40" />
+  <package id="NetOffice.Excel" version="1.7.4.1-pre1" targetFramework="net40" />
 </packages>
