--- a/Misc/01 Super Addin Sample/IDTExtensibility2 SuperAddin/packages.config
+++ b/Misc/01 Super Addin Sample/IDTExtensibility2 SuperAddin/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NetOffice.Access" version="1.7.3.0" targetFramework="net40" />
-  <package id="NetOffice.Core" version="1.7.3.0" targetFramework="net40" />
-  <package id="NetOffice.Excel" version="1.7.3.0" targetFramework="net40" />
-  <package id="NetOffice.MSProject" version="1.7.3.0" targetFramework="net40" />
-  <package id="NetOffice.Outlook" version="1.7.3.0" targetFramework="net40" />
-  <package id="NetOffice.PowerPoint" version="1.7.3.0" targetFramework="net40" />
-  <package id="NetOffice.Word" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.Access" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.Core" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.Excel" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.MSProject" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.Outlook" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.PowerPoint" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.Word" version="1.7.3.0" targetFramework="net40" />
 </packages>
