--- a/Misc/Other Examples/MiscExamples/packages.config
+++ b/Misc/Other Examples/MiscExamples/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NetOffice.Core" version="1.7.3.0" targetFramework="net40" />
-  <package id="NetOffice.Excel" version="1.7.3.0" targetFramework="net40" />
-  <package id="NetOffice.Outlook" version="1.7.3.0" targetFramework="net40" />
-  <package id="NetOffice.Word" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.Core" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.Excel" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.Outlook" version="1.7.3.0" targetFramework="net40" />
+  <package id="NetOfficeFw.Word" version="1.7.3.0" targetFramework="net40" />
 </packages>
