--- a/Outlook/02 NetOffice Outlook COMAddin Sample/06 FormRegions/packages.config
+++ b/Outlook/02 NetOffice Outlook COMAddin Sample/06 FormRegions/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NetOfficeFw.Core" version="1.7.4.5" targetFramework="net40" />
+  <package id="NetOfficeFw.MSFormsApi" version="1.7.4.5" targetFramework="net40" />
   <package id="NetOfficeFw.Outlook" version="1.7.4.5" targetFramework="net40" />
 </packages>
